# action-python-package-new-version-test

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
